// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetails viewerCanAdminister: false viewing existing 1`] = `
<CampaignDetails
  _fetchCampaignById={[Function]}
  campaignID="c"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/]"
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PageTitle
    title="n"
  />
  <CampaignActionsBar
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "avatarURL": "http://test.test/avatar",
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesets": Object {
          "stats": Object {
            "closed": 0,
            "merged": 0,
            "open": 8,
            "total": 10,
            "unpublished": 2,
          },
          "totalCount": 0,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "diffStat": Object {
          "added": 5,
          "changed": 3,
          "deleted": 2,
        },
        "id": "c",
        "name": "n",
        "namespace": Object {
          "namespaceName": "alice",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": false,
      }
    }
  >
    <div
      className="mb-2"
    >
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        n
      </span>
    </div>
    <div
      className="d-flex mb-2 position-relative"
    >
      <div>
        <h1
          className="mb-1"
        >
          n
        </h1>
        <div>
          <CampaignStateBadge
            isClosed={false}
          >
            <span
              className="badge badge-success text-uppercase mr-2"
            >
              <Memo(ImageAutoAdjustIcon)
                className="icon-inline campaign-actions-bar__campaign-icon"
              >
                <svg
                  className="mdi-icon icon-inline campaign-actions-bar__campaign-icon"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
                  />
                </svg>
              </Memo(ImageAutoAdjustIcon)>
               Open
            </span>
          </CampaignStateBadge>
          <small
            className="text-muted"
          >
            0
            % complete. 
            0
             changesets total
          </small>
        </div>
      </div>
    </div>
  </CampaignActionsBar>
  <CampaignInfoCard
    author={
      Object {
        "avatarURL": "http://test.test/avatar",
        "username": "alice",
      }
    }
    createdAt="2020-01-01"
    description="d"
    history="[History]"
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
          <UserAvatar
            className="icon-inline"
            user={
              Object {
                "avatarURL": "http://test.test/avatar",
                "username": "alice",
              }
            }
          >
            <img
              className="user-avatar icon-inline"
              src="http://test.test/avatar"
            />
          </UserAvatar>
           
          alice
        </strong>
         
        started 
        <Timestamp
          date="2020-01-01"
        >
          <span
            className="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </Timestamp>
      </div>
      <div
        className="card-body"
      >
        <Markdown
          dangerousInnerHTML="<p>d</p>
"
          history="[History]"
        >
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>d</p>
",
              }
            }
            onClick={[Function]}
          />
        </Markdown>
      </div>
    </div>
  </CampaignInfoCard>
</CampaignDetails>
`;

exports[`CampaignDetails viewerCanAdminister: true viewing existing 1`] = `
<CampaignDetails
  _fetchCampaignById={[Function]}
  campaignID="c"
  history="[History]"
  isLightTheme={true}
  location="[Location path=/]"
  telemetryService={
    Object {
      "log": [Function],
      "logViewEvent": [Function],
    }
  }
>
  <PageTitle
    title="n"
  />
  <CampaignActionsBar
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "avatarURL": "http://test.test/avatar",
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesets": Object {
          "stats": Object {
            "closed": 0,
            "merged": 0,
            "open": 8,
            "total": 10,
            "unpublished": 2,
          },
          "totalCount": 0,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "diffStat": Object {
          "added": 5,
          "changed": 3,
          "deleted": 2,
        },
        "id": "c",
        "name": "n",
        "namespace": Object {
          "namespaceName": "alice",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": true,
      }
    }
  >
    <div
      className="mb-2"
    >
      <span>
        <AnchorLink
          to="/campaigns"
        >
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </AnchorLink>
      </span>
      <span
        className="text-muted d-inline-block mx-1"
      >
        /
      </span>
      <span>
        n
      </span>
    </div>
    <div
      className="d-flex mb-2 position-relative"
    >
      <div>
        <h1
          className="mb-1"
        >
          n
        </h1>
        <div>
          <CampaignStateBadge
            isClosed={false}
          >
            <span
              className="badge badge-success text-uppercase mr-2"
            >
              <Memo(ImageAutoAdjustIcon)
                className="icon-inline campaign-actions-bar__campaign-icon"
              >
                <svg
                  className="mdi-icon icon-inline campaign-actions-bar__campaign-icon"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
                  />
                </svg>
              </Memo(ImageAutoAdjustIcon)>
               Open
            </span>
          </CampaignStateBadge>
          <small
            className="text-muted"
          >
            0
            % complete. 
            0
             changesets total
          </small>
        </div>
      </div>
    </div>
  </CampaignActionsBar>
  <CampaignInfoCard
    author={
      Object {
        "avatarURL": "http://test.test/avatar",
        "username": "alice",
      }
    }
    createdAt="2020-01-01"
    description="d"
    history="[History]"
  >
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
          <UserAvatar
            className="icon-inline"
            user={
              Object {
                "avatarURL": "http://test.test/avatar",
                "username": "alice",
              }
            }
          >
            <img
              className="user-avatar icon-inline"
              src="http://test.test/avatar"
            />
          </UserAvatar>
           
          alice
        </strong>
         
        started 
        <Timestamp
          date="2020-01-01"
        >
          <span
            className="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </Timestamp>
      </div>
      <div
        className="card-body"
      >
        <Markdown
          dangerousInnerHTML="<p>d</p>
"
          history="[History]"
        >
          <div
            className="markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>d</p>
",
              }
            }
            onClick={[Function]}
          />
        </Markdown>
      </div>
    </div>
  </CampaignInfoCard>
</CampaignDetails>
`;
